{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 9,
  "lineage": "20c7eaa0-a658-b3ca-7e46-9900837b2d86",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks_nsg",
            "location": "uksouth",
            "name": "aks_nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks_nsg/securityRules/kube_apiserver_rule",
            "name": "kube_apiserver_rule",
            "network_security_group_name": "aks_nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "137.220.78.104",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks_nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks_nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "137.220.78.104",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet/subnets/control_plane_subnet",
            "name": "control_plane_subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet/subnets/worker_node_subnet",
            "name": "worker_node_subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e43c8cfe-6378-4669-b373-467d9a69fd6e",
            "id": "/subscriptions/3ba5faef-c736-4083-bb52-c58aec95e6a2/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks_vnet",
            "location": "uksouth",
            "name": "aks_vnet",
            "resource_group_name": "networking-resource-group"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    }
  ]
}